--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Moral Parliament Quiz</title>
+    <meta name="description" content="Allocate resources across different causes based on your moral credences and ethical perspectives." />
+    <meta name="author" content="Moral Parliament Quiz" />
+    <title>Moral Parliament Quiz - Where Should Your Giving Go?</title>
   </head>
   <body>
     <div id="root"></div>
