Add reset button feature, feature-flag, snapshot

--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -61,6 +61,13 @@
   <ul class="prototype-list">
     <!-- Add new prototypes here -->
     <li class="prototype-item">
+      <h2>Prototype reset-button</h2>
+      <p>Reset Button: Adds 'Start Over' button on results screen to clear all state and return to welcome</p>
+      <p><span class="version" data-proto="reset-button">Created: 2026-01-19 17:21 (prototype-reset-button-v1)</span></p>
+      <a href="./reset-button/">View Prototype</a>
+    </li>
+
+    <li class="prototype-item">
       <h2>Prototype jan-19</h2>
       <p>Baseline 4 question 4 model with slider behavior</p>
       <p><span class="version" data-proto="jan-19">Created: 2026-01-19 09:53 (prototype-jan-19-v1)</span></p>
