Snapshot side by side results feature

--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -61,6 +61,13 @@
   <ul class="prototype-list">
     <!-- Add new prototypes here -->
     <li class="prototype-item">
+      <h2>Prototype side-by-side-comparison</h2>
+      <p>Side-by-side before/after view when credences edited</p>
+      <p><span class="version" data-proto="side-by-side-comparison">Created: 2026-01-20 08:52 (prototype-side-by-side-comparison-v1)</span></p>
+      <a href="./side-by-side-comparison/">View Prototype</a>
+    </li>
+
+    <li class="prototype-item">
       <h2>Prototype prototype-calculation-debugger</h2>
       <p>Developer tool for testing calculation parameters at runtime</p>
       <p><span class="version" data-proto="prototype-calculation-debugger">Created: 2026-01-19 18:56 (prototype-prototype-calculation-debugger-v2)</span></p>
