Fix questions and causes copy

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="theme-color" content="#0c435f" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="description" content="Allocate resources across different causes based on your moral credences and ethical perspectives." />
-    <meta name="author" content="Moral Parliament Quiz" />
-    <title>Moral Parliament Quiz - Where Should Your Giving Go?</title>
+    <meta name="author" content="Donor Compass" />
+    <title>Donor Compass - Where Should Your Giving Go?</title>
   </head>
   <body>
     <div id="root"></div>
